[package]
name = "rs_fbdplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3", features = ["console"]}
psg_lite = "*"
psg = "*"
fbd_sequencer = "0.2.0"
direct_ring_buffer = "0.2.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
