[package]
name = "rs_fbdplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.93"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = ["console"]}
psg_lite = "0.1.2"
psg = "1.0.1"
fbd_sequencer = "0.2.1"
direct_ring_buffer = "0.2.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
